--- a/css/Style.css
+++ b/css/Style.css
@@ -1,7 +1,7 @@
 * {
     padding: 0;
     margin: 0;
-    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif';
+    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
 }
 
 body {
@@ -43,7 +43,7 @@ h3  {
     font-style: italic;
 }
 
-img[src="img/gatonaranja.png"] {
+img[src="#"] {
     border-radius: 1rem;
     height: 512px;
 }
