--- a/css/Style.css
+++ b/css/Style.css
@@ -47,3 +47,20 @@ img[src="#"] {
     border-radius: 1rem;
     height: 512px;
 }
+
+@media screen and (max-width: 640px) {
+    .menu {
+        background: blue;
+    }
+}
+
+@media screen and (min-width: 640px) and (max-width:1280px) {
+    .menu {
+        background: red;
+    }
+}
+@media screen and (min-width:1280px) {
+    .menu {
+        background: green;
+    }
+}
